# Waveshare-ESP32-S3-Touch-LCD-5-esp-idf-hal-Slint

./: Cargo.toml  README.md  build.rs  sdkconfig.defaults
src/: main.rs  slint_platform.rs
ui/: main.slint
