[package]
name = "esp32-s3-touch-lcd-5-esp-idf-hal-slint"
version = "0.1.0"
authors = ["Olivier Goffart <olivier.goffart@slint.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-s3-touch-lcd-5-esp-idf-hal-slint"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
slint = { version = "1.10.0", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"]}
gt911 = "0.3"

[build-dependencies]
embuild = "0.33"
slint-build = { version = "1.10.0", features = ["sdf-fonts"]}
